test/compile_fail/effect_state_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.state.Context;
}
